objects/PL32__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Group__c</fullName>
        <label>Business Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Stage__c</fullName>
        <label>Sales Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Line is required L32</label>
</CustomObject>